--- a/users/modules/facebook/README
+++ b/users/modules/facebook/README
@@ -3,4 +3,4 @@ Setting up Facebook integration
 * Copy xd_receiver.htm to the root of your site.
 * Create application: http://www.facebook.com/developers/createapp.php
 * Set Connect URL to the root of your site
-* Set UserConfig::$FacebookAPIKey and UserConfig::$FacebookSecret in config.php
+* Create Facebook module with API Key and Secret in config.php
